// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expenses 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    Expense
     totalling 
    $0.99
  </h2>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h2>
    Viewing 
    23
     
    Expenses
     totalling 
    $354.58
  </h2>
</div>
`;
